Switch dark mode theme to Night Owl.

--- a/assets/css/syntax.scss
+++ b/assets/css/syntax.scss
@@ -15,7 +15,7 @@
 .highlight .hll { background-color: var(--highlight-hll-bg, #ffffcc) }
 .highlight .c { color: var(--highlight-c, #999988); font-style: italic } /* Comment */
 .highlight .err { color: var(--highlight-err, #a61717); background-color: var(--highlight-err-bg, #e3d2d2) } /* Error */
-.highlight .k { color: var(--highlight-k, #000000); font-weight: bold } /* Keyword */
+.highlight .k { color: var(--highlight-k, #ed0cad); font-weight: bold } /* Keyword */
 .highlight .o { color: var(--highlight-o, #000000); font-weight: bold } /* Operator */
 .highlight .cm { color: var(--highlight-cm, #999988); font-style: italic } /* Comment.Multiline */
 .highlight .cp { color: var(--highlight-cp, #999999); font-weight: bold; font-style: italic } /* Comment.Preproc */
