--- a/assets/css/_dark/dark-syntax.scss
+++ b/assets/css/_dark/dark-syntax.scss
@@ -9,67 +9,67 @@
 @media (prefers-color-scheme: dark) {
   html {
     /* syntax highlight colors from https://raw.githubusercontent.com/jwarby/pygments-css/master/monokai.css */
-    --highlight-pre-bg: #272822;
+    --highlight-pre-bg: #011627;
     --highlight-hll-bg: #3f3f3f;
-    --highlight-c: #7f9f7f; /* Comment */
+    --highlight-c: #676e95; /* Comment */
     --highlight-err: #e37170; /* Error */
     --highlight-err-bg: #3d3535; /* Error background */
-    --highlight-k: #f0dfaf; /* Keyword */
+    --highlight-k: #c792ea; /* Keyword */
     --highlight-l: #ccc; /* Literal */
-    --highlight-n: #dcdccc; /* Name */
+    --highlight-n: #d6deeb; /* Name */
     --highlight-o: #f0efd0; /* Operator */
     --highlight-p: #41706f; /* Punctuation */
-    --highlight-cm: #7f9f7f; /* Comment.Multiline */
-    --highlight-cp: #7f9f7f; /* Comment.Preproc */
-    --highlight-c1: #7f9f7f; /* Comment.Single */
-    --highlight-cs: #cd0000; /* Comment.Special */
-    --highlight-kc: #dca3a3; /* Keyword.Constant */
-    --highlight-kd: #ffff86; /* Keyword.Declaration */
-    --highlight-kn: #dfaf8f; /* Keyword.Namespace */
-    --highlight-kp: #cdcf99; /* Keyword.Pseudo */
-    --highlight-kr: #cdcd00; /* Keyword.Reserved */
-    --highlight-kt: #00cd00; /* Keyword.Type */
+    --highlight-cm: #676e95; /* Comment.Multiline */
+    --highlight-cp: #7fdbca; /* Comment.Preproc */
+    --highlight-c1: #676e95; /* Comment.Single */
+    --highlight-cs: #676e95; /* Comment.Special */
+    --highlight-kc: #82aaff; /* Keyword.Constant */
+    --highlight-kd: #d6deeb; /* Keyword.Declaration */
+    --highlight-kn: #d6deeb; /* Keyword.Namespace */
+    --highlight-kp: #d6deeb; /* Keyword.Pseudo */
+    --highlight-kr: #d6deeb; /* Keyword.Reserved */
+    --highlight-kt: #82aaff; /* Keyword.Type */
     --highlight-ld: #cc9393; /* Literal.Date */
-    --highlight-m: #8cd0d3; /* Literal.Number */
-    --highlight-s: #cc9393; /* Literal.String */
-    --highlight-na: #9ac39f; /* Name.Attribute */
-    --highlight-nb: #efef8f; /* Name.Builtin */
-    --highlight-nc: #efef8f; /* Name.Class */
-    --highlight-no: #ccc; /* Name.Constant */
-    --highlight-nd: #ccc; /* Name.Decorator */
-    --highlight-ni: #c28182; /* Name.Entity */
-    --highlight-ne: #c3bf9f; /* Name.Exception */
-    --highlight-nf: #efef8f; /* Name.Function */
-    --highlight-nl: #ccc; /* Name.Label */
-    --highlight-nn: #8fbede; /* Name.Namespace */
-    --highlight-nx: #ccc; /* Name.Other */
-    --highlight-py: #ccc; /* Name.Property */
+    --highlight-m: #f78c6c; /* Literal.Number */
+    --highlight-s: #c3e88d; /* Literal.String */
+    --highlight-na: #ff869a; /* Name.Attribute */
+    --highlight-nb: #d6deeb; /* Name.Builtin */
+    --highlight-nc: #d6deeb; /* Name.Class */
+    --highlight-no: #d6deeb; /* Name.Constant */
+    --highlight-nd: #d6deeb; /* Name.Decorator */
+    --highlight-ni: #d6deeb; /* Name.Entity */
+    --highlight-ne: #d6deeb; /* Name.Exception */
+    --highlight-nf: #82aaff; /* Name.Function */
+    --highlight-nl: #d6deeb; /* Name.Label */
+    --highlight-nn: #d6deeb; /* Name.Namespace */
+    --highlight-nx: #d6deeb; /* Name.Other */
+    --highlight-py: #d6deeb; /* Name.Property */
     --highlight-nt: #9ac39f; /* Name.Tag */
     --highlight-nv: #dcdccc; /* Name.Variable */
     --highlight-ow: #f0efd0; /* Operator.Word */
-    --highlight-w: #ccc; /* Text.Whitespace */
-    --highlight-mf: #8cd0d3; /* Literal.Number.Float */
-    --highlight-mh: #8cd0d3; /* Literal.Number.Hex */
-    --highlight-mi: #8cd0d3; /* Literal.Number.Integer */
-    --highlight-mo: #8cd0d3; /* Literal.Number.Oct */
-    --highlight-sb: #cc9393; /* Literal.String.Backtick */
-    --highlight-sc: #cc9393; /* Literal.String.Char */
-    --highlight-sd: #cc9393; /* Literal.String.Doc */
-    --highlight-s2: #cc9393; /* Literal.String.Double */
-    --highlight-se: #cc9393; /* Literal.String.Escape */
-    --highlight-sh: #cc9393; /* Literal.String.Heredoc */
-    --highlight-si: #cc9393; /* Literal.String.Interpol */
-    --highlight-sx: #cc9393; /* Literal.String.Other */
-    --highlight-sr: #cc9393; /* Literal.String.Regex */
-    --highlight-s1: #cc9393; /* Literal.String.Single */
-    --highlight-ss: #cc9393; /* Literal.String.Symbol */
-    --highlight-bp: #efef8f; /* Name.Builtin.Pseudo */
-    --highlight-vc: #efef8f; /* Name.Variable.Class */
-    --highlight-vg: #dcdccc; /* Name.Variable.Global */
-    --highlight-vi: #ffffc7; /* Name.Variable.Instance */
-    --highlight-il: #8cd0d3; /* Literal.Number.Integer.Long */
+    --highlight-w: #d6deeb; /* Text.Whitespace */
+    --highlight-mf: #f78c6c; /* Literal.Number.Float */
+    --highlight-mh: #f78c6c; /* Literal.Number.Hex */
+    --highlight-mi: #f78c6c; /* Literal.Number.Integer */
+    --highlight-mo: #f78c6c; /* Literal.Number.Oct */
+    --highlight-sb: #ffcb6b; /* Literal.String.Backtick */
+    --highlight-sc: #ffcb6b; /* Literal.String.Char */
+    --highlight-sd: #ffcb6b; /* Literal.String.Doc */
+    --highlight-s2: #ffcb6b; /* Literal.String.Double */
+    --highlight-se: #ffcb6b; /* Literal.String.Escape */
+    --highlight-sh: #ffcb6b; /* Literal.String.Heredoc */
+    --highlight-si: #ffcb6b; /* Literal.String.Interpol */
+    --highlight-sx: #ffcb6b; /* Literal.String.Other */
+    --highlight-sr: #ffcb6b; /* Literal.String.Regex */
+    --highlight-s1: #ffcb6b; /* Literal.String.Single */
+    --highlight-ss: #ffcb6b; /* Literal.String.Symbol */
+    --highlight-bp: #d6deeb; /* Name.Builtin.Pseudo */
+    --highlight-vc: #d6deeb; /* Name.Variable.Class */
+    --highlight-vg: #d6deeb; /* Name.Variable.Global */
+    --highlight-vi: #d6deeb; /* Name.Variable.Instance */
+    --highlight-il: #f78c6c; /* Literal.Number.Integer.Long */
 
-    // --highlight-gh: none; /* Generic Heading & Diff Header */
+    --highlight-gh: #82b1ff; /* Generic Heading & Diff Header */
     --highlight-gu: purple; /* Generic.Subheading & Diff Unified/Comment? */
     --highlight-gd: #cd0000; /* Generic.Deleted & Diff Deleted */
 
@@ -79,11 +79,11 @@
   }
 
   pre {
-    color: #fdce93; /* override Bootstrap */
+    color: #ffcb6b; /* override Bootstrap */
   }
 
   kbd {
-    background-color: #3f3f3f;
+    background-color: #011627;
   }
 
 }
