Add Twitter handle to sidebar as page name.

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -21,7 +21,9 @@
 
     <div class="profile-text mt-3">
       <div id="site-title">
-        <a href="{{ site.baseurl }}/">{{- site.title -}}</a>
+        <a href="https://twitter.com/{{ site.twitter.username }}" target="_blank">
+          <i class="fab fa-twitter"></i>&nbsp;{{- site.title -}}
+        </a>
       </div>
       <div id="site-subtitle" class="font-italic">{{- site.tagline -}}</div>
     </div>
