Change in-line code highlight from pink to purple in dark theme.

--- a/assets/css/syntax.scss
+++ b/assets/css/syntax.scss
@@ -80,7 +80,8 @@
 div.highlight,
 figure.highlight,
 .highlighter-rouge {
-  background: var(--highlight-pre-bg, #f7f7f7)
+  background: var(--highlight-pre-bg, #f7f7f7);
+  color: #c792ea; // use keyword color from dark mode. This is overridden below for light.
 }
 
 .highlight {
