--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -73,9 +73,9 @@
 }
 
 .page-item.active .page-link {
-  background-color: var(--btn-active-bg, #2a408e);
-  border-color: var(--btn-active-border-color, #007bff);
-  box-shadow: 0 0 8px 0 var(--main-wrapper-bg, #4b92d2) !important;
+  background-color: var(--btn-active-bg, #440BA0); 
+  border-color: var(--btn-active-border-color, #5809D7); 
+  box-shadow: 0 0 8px 0 var(--main-wrapper-bg, #77609D) !important;
   color: var(--text-color, #f8f8f8);
 }
 
