--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -44,13 +44,13 @@ body {
   z-index: 99;
   -webkit-transition: transform 0.4s ease;
   transition: transform 0.4s ease;
-  background: rgb(42, 30, 107);
+  background: rgb(88, 9, 215);
   background: var(--sidebar-bg,
-    radial-gradient(circle, rgba(42, 30, 107, 1) 0%, rgba(35, 37, 46, 1) 100%));
+    radial-gradient(circle, rgb(88, 9, 215) 0%, rgba(35, 37, 46, 1) 100%));
 }
 
 #sidebar a {
-  color: rgba(255, 255, 255, 0.5);
+  color: rgba(255, 255, 255, 0.7);
   transition: color 0.35s ease-in-out;
 }
 
@@ -292,7 +292,7 @@ body {
 }
 
 #search-wrapper+a { /* 'Cancel' link */
-  color: var(--link-color, #2a408e);
+  color: var(--link-color, rgb(68, 11, 160));
   margin-left: 1rem;
   display: none;
 }
@@ -526,8 +526,8 @@ footer .license a {
 }
 
 #access-tags .post-tag:hover {
-  background-color: #2a408e;
-  border-color: #2a408e;
+  background-color: rgb(68, 11, 160);
+  border-color: rgb(88, 9, 215);
   color: #fff;
   transition: none;
 }
@@ -604,7 +604,7 @@ blockquote {
 }
 
 .post-content blockquote a {
-  color: var(--link-color, #2a408e);
+  color: var(--link-color, rgb(68, 11, 160));
 }
 
 kbd {
@@ -662,7 +662,7 @@ a.reversefootnote {
 }
 
 .post-content a {
-  color: var(--link-color, #2a408e);
+  color: var(--link-color, rgb(68, 11, 160));
   border-bottom: 1px dotted var(--link-underline-color, #c2c6cc);
 }
 
@@ -674,7 +674,7 @@ p>a, span>a,
 #page-tag a,
 #archives a,
 #search-results a {
-  color: var(--link-color, #2a408e);
+  color: var(--link-color, rgb(68, 11, 160));
 }
 
 .categories a,
@@ -700,8 +700,8 @@ footer a:hover,
 #post-wrapper .post-content a:hover,
 #page .post-content a:hover,
 #access-lastmod a:hover {
-  color: #d2603a;
-  border-bottom: 1px solid #d2603a;
+  color: #d5772f;
+  border-bottom: 1px solid #d2893a;
   text-decoration: none;
 }
 
@@ -753,7 +753,7 @@ table tbody td {
 }
 
 .post-meta a {
-  color: var(--link-color, #2a408e);
+  color: var(--link-color, rgb(68, 11, 160));
   border-bottom: 1px dotted var(--link-underline-color, #c2c6cc);
 }
 
@@ -790,7 +790,7 @@ table tbody td {
 .post-tag:hover {
   border-bottom: none;
   text-decoration: none;
-  color: #d2603a;
+  color: #d5772f;
 }
 
 /* --- Effects classes --- */
