--- a/assets/css/syntax.scss
+++ b/assets/css/syntax.scss
@@ -13,18 +13,18 @@
 /* the fallback color from https://raw.githubusercontent.com/jwarby/pygments-css/master/github.css */
 .highlight pre { background-color: var(--highlight-pre-bg) }
 .highlight .hll { background-color: var(--highlight-hll-bg, #ffffcc) }
-.highlight .c { color: var(--highlight-c, #999988); font-style: italic } /* Comment */
+.highlight .c { color: var(--highlight-c, #989fb1); font-style: italic } /* Comment */
 .highlight .err { color: var(--highlight-err, #a61717); background-color: var(--highlight-err-bg, #e3d2d2) } /* Error */
-.highlight .k { color: var(--highlight-k, #ed0cad); font-weight: bold } /* Keyword */
-.highlight .o { color: var(--highlight-o, #000000); font-weight: bold } /* Operator */
-.highlight .cm { color: var(--highlight-cm, #999988); font-style: italic } /* Comment.Multiline */
-.highlight .cp { color: var(--highlight-cp, #999999); font-weight: bold; font-style: italic } /* Comment.Preproc */
-.highlight .c1 { color: var(--highlight-c1, #999988); font-style: italic } /* Comment.Single */
-.highlight .cs { color: var(--highlight-cs, #999999); font-weight: bold; font-style: italic } /* Comment.Special */
+.highlight .k { color: var(--highlight-k, #994cc3); font-weight: bold } /* Keyword */
+.highlight .o { color: var(--highlight-o, #994cc3); font-weight: bold } /* Operator */
+.highlight .cm { color: var(--highlight-cm, #989fb1); font-style: italic } /* Comment.Multiline */
+.highlight .cp { color: var(--highlight-cp, #4876d6); font-weight: bold; font-style: italic } /* Comment.Preproc */
+.highlight .c1 { color: var(--highlight-c1, #989fb1); font-style: italic } /* Comment.Single */
+.highlight .cs { color: var(--highlight-cs, #989fb1); font-weight: bold; font-style: italic } /* Comment.Special */
 .highlight .gd { color: var(--highlight-gd, #000000); background-color: var(#ffdddd) } /* Generic.Deleted */
 .highlight .ge { color: var(--highlight-ge, #000000); font-style: italic } /* Generic.Emph */
 .highlight .gr { color: var(--highlight-gr, #aa0000) } /* Generic.Error */
-.highlight .gh { color: var(--highlight-gh, #999999) } /* Generic.Heading */
+.highlight .gh { color: var(--highlight-gh, #989fb1) } /* Generic.Heading */
 .highlight .gi { color: var(--highlight-gi, #000000); background-color: #ddffdd } /* Generic.Inserted */
 .highlight .go { color: var(#888888) } /* Generic.Output */
 .highlight .gp { color: var(#555555) } /* Generic.Prompt */
@@ -38,36 +38,36 @@
 .highlight .kr { color: var(--highlight-kr, #000000); font-weight: bold } /* Keyword.Reserved */
 .highlight .kt { color: var(--highlight-kt, #445588); font-weight: bold } /* Keyword.Type */
 .highlight .m { color: var(--highlight-m, #009999) } /* Literal.Number */
-.highlight .s { color: var(--highlight-s, #d01040) } /* Literal.String */
+.highlight .s { color: var(--highlight-s, #c96765) } /* Literal.String */
 .highlight .na { color: var(--highlight-na, #008080) } /* Name.Attribute */
 .highlight .nb { color: var(--highlight-nb, #0086B3) } /* Name.Builtin */
 .highlight .nc { color: var(--highlight-nc, #445588); font-weight: bold } /* Name.Class */
 .highlight .no { color: var(--highlight-no, #008080) } /* Name.Constant */
 .highlight .nd { color: var(--highlight-nd, #3c5d5d); font-weight: bold } /* Name.Decorator */
 .highlight .ni { color: var(--highlight-ni, #800080) } /* Name.Entity */
-.highlight .ne { color: var(--highlight-ne, #990000); font-weight: bold } /* Name.Exception */
-.highlight .nf { color: var(--highlight-nf, #990000); font-weight: bold } /* Name.Function */
-.highlight .nl { color: var(--highlight-nl, #990000); font-weight: bold } /* Name.Label */
-.highlight .nn { color: var(--highlight-nn, #555555) } /* Name.Namespace */
+.highlight .ne { color: var(--highlight-ne, #4876d6); font-weight: bold } /* Name.Exception */
+.highlight .nf { color: var(--highlight-nf, #4876d6); font-weight: bold } /* Name.Function */
+.highlight .nl { color: var(--highlight-nl, #4876d6); font-weight: bold } /* Name.Label */
+.highlight .nn { color: var(--highlight-nn, #111111) } /* Name.Namespace */
 .highlight .nt { color: var(--highlight-nt, #000080) } /* Name.Tag */
-.highlight .nv { color: var(--highlight-nv, #008080) } /* Name.Variable */
+.highlight .nv { color: var(--highlight-nv, #4876d6) } /* Name.Variable */
 .highlight .ow { color: var(--highlight-ow, #000000); font-weight: bold } /* Operator.Word */
 .highlight .w { color: var(--highlight-w, #bbbbbb) } /* Text.Whitespace */
 .highlight .mf { color: var(--highlight-mf, #009999) } /* Literal.Number.Float */
 .highlight .mh { color: var(--highlight-mh, #009999) } /* Literal.Number.Hex */
 .highlight .mi { color: var(--highlight-mi, #009999) } /* Literal.Number.Integer */
 .highlight .mo { color: var(--highlight-mo, #009999) } /* Literal.Number.Oct */
-.highlight .sb { color: var(--highlight-sb, #d01040) } /* Literal.String.Backtick */
-.highlight .sc { color: var(--highlight-sc, #d01040) } /* Literal.String.Char */
-.highlight .sd { color: var(--highlight-sd, #d01040) } /* Literal.String.Doc */
-.highlight .s2 { color: var(--highlight-s2, #d01040) } /* Literal.String.Double */
-.highlight .se { color: var(--highlight-se, #d01040) } /* Literal.String.Escape */
-.highlight .sh { color: var(--highlight-sh, #d01040) } /* Literal.String.Heredoc */
-.highlight .si { color: var(--highlight-si, #d01040) } /* Literal.String.Interpol */
-.highlight .sx { color: var(--highlight-sx, #d01040) } /* Literal.String.Other */
-.highlight .sr { color: var(--highlight-sr, #009926) } /* Literal.String.Regex */
-.highlight .s1 { color: var(--highlight-s1, #d01040) } /* Literal.String.Single */
-.highlight .ss { color: var(--highlight-ss, #990073) } /* Literal.String.Symbol */
+.highlight .sb { color: var(--highlight-sb, #c96765) } /* Literal.String.Backtick */
+.highlight .sc { color: var(--highlight-sc, #c96765) } /* Literal.String.Char */
+.highlight .sd { color: var(--highlight-sd, #c96765) } /* Literal.String.Doc */
+.highlight .s2 { color: var(--highlight-s2, #c96765) } /* Literal.String.Double */
+.highlight .se { color: var(--highlight-se, #c96765) } /* Literal.String.Escape */
+.highlight .sh { color: var(--highlight-sh, #c96765) } /* Literal.String.Heredoc */
+.highlight .si { color: var(--highlight-si, #c96765) } /* Literal.String.Interpol */
+.highlight .sx { color: var(--highlight-sx, #c96765) } /* Literal.String.Other */
+.highlight .sr { color: var(--highlight-sr, #0c969b) } /* Literal.String.Regex */
+.highlight .s1 { color: var(--highlight-s1, #c96765) } /* Literal.String.Single */
+.highlight .ss { color: var(--highlight-ss, #c96765) } /* Literal.String.Symbol */
 .highlight .bp { color: var(--highlight-bp, #999999) } /* Name.Builtin.Pseudo */
 .highlight .vc { color: var(--highlight-vc, #008080) } /* Name.Variable.Class */
 .highlight .vg { color: var(--highlight-vg, #008080) } /* Name.Variable.Global */
