--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -46,11 +46,11 @@ body {
   transition: transform 0.4s ease;
   background: rgb(88, 9, 215);
   background: var(--sidebar-bg,
-    radial-gradient(circle, rgb(88, 9, 215) 0%, rgba(35, 37, 46, 1) 100%));
+    radial-gradient(circle, rgba(39, 1, 101, 0.68) 0%, rgba(35, 37, 46, 1) 100%));
 }
 
 #sidebar a {
-  color: rgba(255, 255, 255, 0.7);
+  color: rgba(255, 255, 255, 0.5);
   transition: color 0.35s ease-in-out;
 }
 
@@ -186,21 +186,21 @@ body {
 }
 
 #site-title a {
-  color: #b6b6b6;
+  color: #dddddd;
   font-weight: 900;
   font-size: 1.5rem;
   letter-spacing: .5px;
 }
 
 #site-title a:hover {
-  color: #fff;
+  color: rgb(156, 220, 254);
   text-decoration: none;
 }
 
 #site-subtitle {
   font-size: 95%;
   text-align: center;
-  color: #828282;
+  color: #b6b6b6;
   line-height: 1.2rem;
   word-spacing: 1px;
   margin: .5rem 1.5rem 2rem 1.5rem;
