--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -186,7 +186,7 @@ body {
 }
 
 #site-title a {
-  color: #dddddd;
+  color: #bcbcbc;
   font-weight: 900;
   font-size: 1.5rem;
   letter-spacing: .5px;
