Try adding og:image:url tag as well.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -145,3 +145,6 @@
     {% endif %}
 
   {% endif %}
+
+  <meta property="og:image:url" content="{{ site.url }}{{ page.image.path }}" />
+  <!-- <meta name="twitter:image:src" content="{{ site.url }}{{ page.image.path }}" /> -->
