Add 'Connect with me' section to post tmeplate.

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -21,8 +21,8 @@
 
     <div class="profile-text mt-3">
       <div id="site-title">
-        <a href="https://twitter.com/{{ site.twitter.username }}" target="_blank">
-          <i class="fab fa-twitter"></i>&nbsp;{{- site.title -}}
+        <a href="{{ site.baseurl }}/" target="_blank">
+          {{ site.title }}
         </a>
       </div>
       <div id="site-subtitle" class="font-italic">{{- site.tagline -}}</div>
