Remove _blank target from title link.

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -21,7 +21,7 @@
 
     <div class="profile-text mt-3">
       <div id="site-title">
-        <a href="{{ site.baseurl }}/" target="_blank">
+        <a href="{{ site.baseurl }}/">
           {{ site.title }}
         </a>
       </div>
