--- a/assets/css/_dark/dark-main.scss
+++ b/assets/css/_dark/dark-main.scss
@@ -9,31 +9,31 @@
 @media (prefers-color-scheme: dark) {
   html {
     /* framework */
-    --main-wrapper-bg: rgb(27, 27, 30);
-    --topbar-wrapper-bg: rgb(39, 40, 43);
-    --search-wrapper-bg: rgb(34, 34, 39);
+    --main-wrapper-bg: rgb(0, 0, 1);
+    --topbar-wrapper-bg:rgb(0, 0, 1);
+    --search-wrapper-bg: rgb(0, 0, 1);
     --search-icon: rgb(100, 102, 105);
     --input-focus-border: rgb(112, 114, 115);
-    --footer-bg: rgb(31, 30, 30);
-    --footer-border: rgb(44, 45, 45);
+    --footer-bg: rgb(0, 0, 1);
+    --footer-border: rgb(0, 0, 1);
     --mask-bg: rgb(68, 69, 70);
 
     /* sidebar */
     --nav-cursor: rgb(183, 182, 182);
-    --sidebar-bg: radial-gradient(circle, #242424 0%, #1d1f27 100%);
+    --sidebar-bg: rgb(0, 0, 1);
 
     /* common color */
-    --text-color: rgb(175, 176, 177);
+    --text-color: rgb(216, 217, 218);
     --text-muted-color: rgb(107, 116, 124);
     --link-color: rgb(138, 180, 248);
     --link-underline-color: rgb(99, 131, 182);
     --main-border: rgb(63, 65, 68);
-    --button-bg: rgb(39, 40, 33);
+    --button-bg: rgb(0, 0, 1);;
     --blockquote-border: rgb(66, 66, 66);
     --blockquote-text: rgb(117, 117, 117);
 
-    --card-bg: rgb(33, 35, 40);
-    --card-header-bg: rgb(51, 50, 50);
+    --card-bg: rgb(0, 0, 1);
+    --card-header-bg: rgb(0, 0, 1);
     --relate-post-title: rgb(164, 175, 181);
 
     /* Home page */
@@ -43,7 +43,9 @@
     /* posts */
     --toc-highlight: rgb(116, 178, 243);
     --tag-bg: rgb(41, 40, 40);
-    --tag-hover: rgb(43, 56, 62);
+    --tag-hover: rgb(41, 40, 40);
+    --tag-hover-text: rgb(255, 255, 255);
+    --tag-hover-border: rgb(255, 255, 255);
     --tb-odd-bg: rgba(52, 53, 42, 0.52); /* odd rows of the posts' table */
     --tb-even-bg: rgb(31, 31, 34); /* even rows of the posts' table */
 
