Add post 'Scala to native code with GraalVM and GitHub Actions'

--- a/assets/css/_dark/dark-syntax.scss
+++ b/assets/css/_dark/dark-syntax.scss
@@ -32,7 +32,7 @@
     --highlight-ld: #cc9393; /* Literal.Date */
     --highlight-m: #f78c6c; /* Literal.Number */
     --highlight-s: #c3e88d; /* Literal.String */
-    --highlight-na: #ff869a; /* Name.Attribute */
+    --highlight-na: #c792ea; /* Name.Attribute */
     --highlight-nb: #d6deeb; /* Name.Builtin */
     --highlight-nc: #d6deeb; /* Name.Class */
     --highlight-no: #d6deeb; /* Name.Constant */
