Change Twitter info section.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -59,9 +59,9 @@ layout: default
 
         <!-- twitter -->
         <div id="follow">
-          <h1>Enjoyed this post?</h1>
+          <h1>❤ &nbsp;...?</h1>
           <h2>
-            Connect with me on Twitter:&nbsp;
+            Connect with me on Twitter: &nbsp;
             <a href="https://twitter.com/{{ site.twitter.username }}" target="_blank">
               @{{- site.twitter.username -}}
             </a>
